- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    6.2.2
- 
    None
- 
    Windows. x64
- 
        
- 
        cd716a2ea2 (qt/qtwebengine/dev) 113de3584e (qt/qtwebengine/6.3) 7b150321c4 (qt/qtwebengine/6.2) 113de3584e (qt/qtwebengine/6.3.0) 7b150321c4 (qt/qtwebengine/6.2) 7b150321c4 (qt/qtwebengine/6.2), 244a9213d (dev), c821835d6 (6.9)
Start Designer
Select QWebEngineView
Crash
- relates to
- 
                    QTBUG-94345 Qt Designer crash in QQuickWidget plugin -         
- Closed
 
-         
- 
                    QTBUG-124370 REG->6.7: QWebEngineView Crashes with OpenGL Rendering and QtDesigner Crashes with QWebEngineView -           
- Closed
 
-         
- 
                    QTCREATORBUG-27807 Embedded Qt Designer does not support QWebEngineView -           
- Closed
 
-         
- 
                    QTBUG-100441 [REG 6.2.1->6.3.0] Designer not launching on macOS x64 -         
- Closed
 
-         
- 
                    QTBUG-104596 [reg->6.4] Qt Designer crashes when OpenGL widget is dragged to form -         
- Closed
 
-         
- 
                    QTBUG-135398 [REG 6.8.3->6.9.0] MSVC2022 x64: Widget Designer crash when QWebEngineView is dragged to canvas -         
- Closed
 
-