QWebEngineView Designer plugin: Fix crash on Windows when using D3D11

Disable the plugin for non-OpenGL graphics API similar to
qttools/482125b15648944d18ae120644f9ffe11b327ff2 for QQuickWidget.

Fixes: QTBUG-100285
Change-Id: Icea3d81c97ef043e953334b134ba632a9daa13a5
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit cd716a2ea2a1f0a3222dcb3cea5d4cee903def09)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>