src/webenginewidgets/plugins/qwebengineview/qwebengineview_plugin.cpp
@@ -43,6 +43,7 @@
 #include <QtDesigner/QExtensionManager>
 
 #include <QtCore/qplugin.h>
+#include <QtQuick/QQuickWindow>
 #include <QWebEngineView>
 
 QT_BEGIN_NAMESPACE
@@ -114,6 +115,14 @@ void QWebEngineViewPlugin::initialize(QDesignerFormEditorInterface * /*core*/)
 
 QString QWebEngineViewPlugin::domXml() const
 {
+    const auto graphicsApi = QQuickWindow::graphicsApi();
+    if (graphicsApi != QSGRendererInterface::OpenGLRhi
+        && graphicsApi != QSGRendererInterface::Software) {
+        qWarning("Qt Designer: The QWebEngineView custom widget plugin is disabled because it requires OpenGL/Software RHI (current: %d).",
+                 int(graphicsApi));
+        return {};
+    }
+
     return QStringLiteral("\
     <ui language=\"c++\">\
         <widget class=\"QWebEngineView\" name=\"webEngineView\">\
